src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  min-height: 100vh;
  background-image: url("./images/background02.jpg");
  background-size: cover;
}
.main-content{
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}
.main-content2{
  height: 100vh;
  padding-top: 10vh;
  display: flex;
  justify-content: center;
}
#search-summoner{
  width: 100%;
}
#search-bar{
  width: 100%;
}
#search-summoner-input{
  float: left;
  width: 80%;
  margin-right: 5px;
}
#search-summoner-button{
  overflow: hidden;
}
#button-height{
  height: 38px;
}
.width-control{
  width: 600px;
  max-height: 95vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.width-control2{
  width: 90%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
#positions{
  width: 80%;
  margin: 0 auto;
  display: flex;
  justify-content: space-around;
}
.position-checkbox{
  padding: 0 !important; /* Used to properly center the checkboxes */
}
td{
  border-top: 0px !important; /* Used to remove the border */
}
#top-champs{
  margin: 0 auto;
}
#summoner-info{
  width: 100%;
  display: flex;
}
#summoner-icon{
  width: 80px;
}
#summoner-name{
  flex: 1;
  align-self: center;
}
.footer {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 2px !important;
  background-color: #efefef;
  text-align: center;
}
.no-margin-header{
  margin: 0 !important;
}
.no-padding-column{
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}
#most-played-table{
  margin-top: 3px !important;
}

.region-select{
  width: 110px;
}
#criteria-bar{
  display: flex;
  min-height: 150px;
}
.criteria{ 
  display: flex;
  flex-direction: column;
  flex: 1;
}
.criteria-content{
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}
.criteria-positions {
  max-width: 400px;
}
.no-margin{
  margin: 0 !important;
}
.no-padding{
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}
.match-table{
  margin: 10px;
  width: 100%;
  text-align: center;
}
.match-tile{
  display: flex;
  justify-content: center;
  padding: 10px 0px;
  font-size: 0.7em;
  overflow: hidden;
  border-bottom: solid #0C0C0C 1px;
}
.match-tile h5 {
  font-weight: 200;
}
.full-width{
  width: 100%;
}
.match-tile-header{
  margin: 0;
  padding: 0;
}
.match-tile-header > .column{
  padding-top: 0px !important;
}
.match-tile.empty{
  height: 73.5px;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.096);
}
.grid{
  width: 100%;
}
.inline{
  display: flex;
  justify-content: center;
}
.icon{
  margin: 0px 5px 0px 5px;
}
.ui.modal{
  background: #1b1c1d !important;
  color: white !important;
}
.ui.modal > div, .ui.modal > div > div{
  background: #1b1c1d !important;
  color: white !important;
}
.ui.modal > div > div > .ui.header {
  color: white !important;
  text-align: center;
  font-weight: 100 !important;
}
.ui.modal > .header{
  text-align: center;
  font-weight: 100 !important;
}
.match-found-player-bar{
  padding-top: 5px !important;
}
.bottom-border{
  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
}
.comment-header{
  margin-right: 5px;
}
.answer-bar{
  display: flex;
  justify-content: center;
  align-items: center;
}
.countdown{
  margin-left: 15px;
  margin-right: 15px;
  height: 60px;
  width: 60px;
}
canvas{
  padding: 0;
  margin: auto;
  display: block;
  width: 60px;
}
.response-message{
  text-align: center;
}
.response-logo{
  margin-bottom: 10px;
}
.modal{
  padding:5px;
  outline: 1px solid rgba(0, 0, 0, 0.425);
  outline-offset: -10px;
}
#submit-button {
  margin-top: 14px;
}
.hidden {
  display: none;
}
#criteria-header {
  border: solid black;
  left: 0%;
}
.comment-box {
  word-wrap: break-word;
}
.item {
  padding: 0 !important;
}
.match-segment {
  outline: 1px solid rgba(0, 0, 0, 0.425);
  outline-offset: -10px;
}
.match-name {
  color: orange;
}
.center-logo {
  width: 100%;
  text-align: center;
}
.summoner-segment {
  width: 100%;
}

